--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -13,7 +13,7 @@
 
   </div>
 
-<%= form_with model: @book,url: "/books/#{@book.id}",method: :patch, local: true do |f|%>
+<%= form_with model: @book,url: update_book_path(@book.id), method: :patch, local: true do |f|%>
 
   <div class = "field">
     <% if @book.errors.any?%>
@@ -53,6 +53,6 @@
 
 <%end%>
 
-<%= link_to "Show", "/books/#{@book.id}"%>
+<%= link_to "Show", book_path(@book.id)%>
 |
 <%= link_to "Back", "/books"%>
