--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -19,9 +19,9 @@
 
         <td><span><%= book.body%></span></td>
 
-        <td><%= link_to "Show", "/books/#{book.id}"%></td>
-        <td><%= link_to "Edit", "/books/#{book.id}/edit"%></td>
-        <td><%= link_to "Destroy", "/books/#{book.id}", method: :delete, "data-confirm" => "Are you sure?"%></td>
+        <td><%= link_to "Show", book_path(book.id)%></td>
+        <td><%= link_to "Edit", edit_book_path(book.id)%></td>
+        <td><%= link_to "Destroy", destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure?"%></td>
       </tr>
 
       <%end%>
